k8s/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: agrosolutions
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7-alpine
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: data
              mountPath: /var/lib/influxdb2
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: influxdb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: agrosolutions
spec:
  selector:
    app: influxdb
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP
